--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Awesome NLS (Non-linear Schroedinger) is (currently) a finite difference solver for the Gross-Pitaevskii (a specific type of nonlinear Schroedinger) equation. It was primarily developed in the Bose-Einstein condensation lab at Georgia Southern with the goal of improving archaic Fortran programs to give better organization, information and record keeping, modular structure for addition of new computational techniques, and scalability for parallel computing.
+Awesome NLS (Non-linear Schroedinger) is (currently) a finite difference solver for the Gross-Pitaevskii (a specific type of nonlinear Schroedinger) equation. It was primarily developed in the Bose-Einstein condensation lab at Georgia Southern University with the goal of improving archaic Fortran programs to give better organization, information and record keeping, modular structure for addition of new computational techniques, and scalability for parallel computing.
+
+Currently, it can do a one-dimensional imaginary time run without any noticeable problems. Real-time works in some ways, but is not stable yet. Trying to understand best way to handle complex vectors. Input and output of parameters is mostly functional, save for inputting analytical expressions for a potential. Lots of work to be done.
